--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,12 +1,14 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap");
+
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: "Montserrat", sans-serif;
+  background-color: #f6f6f6;
 }
 
-a {
+/* a {
   color: inherit;
   text-decoration: none;
 }
@@ -23,4 +25,4 @@ a {
     color: white;
     background: black;
   }
-}
+} */
