--- a/styles/TopBar.module.css
+++ b/styles/TopBar.module.css
@@ -1,6 +1,7 @@
 .container {
   height: 100%;
-  width: calc(100% - 50px * 2);
+  width: 100%;
+  background-color: #f6f6f6;
   display: grid;
   grid-template-columns: 100px auto 100px;
   grid-template-areas: "menu title carrito";
@@ -26,6 +27,6 @@
 
 .titleContainer > span {
   font-size: 40px;
-  font-weight: bold;
+  font-weight: 200;
   letter-spacing: 10px;
 }
