--- a/styles/ProductDetail.module.css
+++ b/styles/ProductDetail.module.css
@@ -3,8 +3,8 @@
   display: grid;
   height: calc(100vh - 100px);
   width: 100%;
-  /* grid-template-columns: 200px 1fr; */
-  grid-template-rows: 60px 1fr;
+  grid-template-columns: 1fr 4fr;
+  grid-template-rows: 60px 300px 1fr;
   padding: 50px;
 }
 
@@ -33,8 +33,13 @@
 }
 
 .pickerContainer {
-  display: flex;
-  justify-content: space-evenly;
+  display: grid;
+  align-items: center;
+
+  grid-template-columns: 100px 1fr;
+  gap: 50px;
+  font-size: 22px;
+  font-weight: 500;
 }
 
 .picker {
@@ -45,11 +50,23 @@
 .counterPicker {
   display: flex;
   column-gap: 10px;
+  align-items: center;
 }
 
 .detailContainer {
   flex-direction: column;
   display: flex;
-  row-gap: 10px;
-  justify-content: space-evenly;
+  row-gap: 50px;
+}
+
+.button {
+  width: 400px;
+}
+
+.buttonCatalogoContainer {
+  grid-row: 3;
+  grid-column: 1 / 3;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
 }
