--- a/styles/Cart.module.css
+++ b/styles/Cart.module.css
@@ -4,7 +4,7 @@
   height: calc(100vh - 100px);
   width: 100%;
   grid-template-columns: 1fr;
-  grid-template-rows: 60px 300px 1fr;
+  grid-template-rows: 60px 1fr 70px;
   padding: 50px;
 }
 
@@ -30,26 +30,47 @@
   width: 400px;
 }
 
-.buttonCatalogoContainer {
+.footer {
   grid-row: 3;
-
   display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-end;
+  padding-right: 50px;
+}
+
+.resume {
+  align-self: center;
+  font-size: 22px;
+  font-weight: 500;
 }
 
 .listContainer {
   display: grid;
   grid-template-columns: 2fr 1fr 1fr;
-  grid-template-rows: 20px;
+  grid-template-rows: 30px 1fr;
+  row-gap: 20px;
   height: 100%;
   align-items: center;
+  overflow: hidden;
 }
 
 .listHeaderContainer {
+  height: 100%;
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-column: 2 / 4;
+  grid-row: 1;
+}
+
+.lineListHeader {
+  grid-row: 1;
+  grid-column: 1/-1;
+  width: 60%;
+  align-self: flex-end;
+  justify-self: end;
+  background-color: black;
+  height: 1px;
 }
 
 .titlesList {
@@ -63,5 +84,23 @@
   grid-column: 1 / -1;
   grid-row: 2;
   grid-template-columns: inherit;
+  grid-auto-rows: 40px;
+  row-gap: 15px;
   height: 100%;
+  text-transform: capitalize;
+  font-size: 20px;
+  font-weight: 400;
+  overflow: scroll;
+  align-items: center;
+}
+
+.productListName {
+  letter-spacing: 2px;
+  font-weight: 300;
+}
+
+.productListCounter {
+  display: flex;
+  column-gap: 10px;
+  align-items: center;
 }
