--- a/styles/Catalogo.module.css
+++ b/styles/Catalogo.module.css
@@ -32,6 +32,7 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
+  overflow-y: scroll;
 }
 
 .listItem {
@@ -60,4 +61,14 @@
   flex-wrap: wrap;
   row-gap: 70px;
   justify-content: space-around;
+
+  width: 100%;
+  height: 100%;
+}
+
+.spinnerContainer {
+  width: 100%;
+  height: 100%;
+  display: grid;
+  place-items: center;
 }
