--- a/styles/ProductDetail.module.css
+++ b/styles/ProductDetail.module.css
@@ -70,3 +70,10 @@
   flex-direction: column;
   justify-content: flex-end;
 }
+
+.spinnerContainer {
+  width: 100%;
+  height: 100%;
+  display: grid;
+  place-items: center;
+}
