--- a/styles/Crud.module.css
+++ b/styles/Crud.module.css
@@ -2,7 +2,7 @@
     background-color: white;
     padding: 50px;
     display: grid;
-    height: calc(100vh - 100px);
+    height: 100%;
     width: 100%;
     grid-template-rows: repeat(5, calc(100% / 5));
     grid-template-columns: repeat(4, calc(100% / 4));
@@ -10,13 +10,22 @@
 
 .titulo {
   color: black;
-  font-size: 30px;
+  font-size: 40px;
   font-family: "Montserrat", sans-serif;
   letter-spacing: 10px;
 }
 
 .form {
-  grid-column: 2 / 4;
+  grid-column: 4 / 5;
   grid-row: 2 / 3;
+  background-color: white;
+}
+
+.containerProductos {
+  grid-column: 1 / 4;
+  grid-row: 2 / 3;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
   background-color: white;
 }
